added formating to pictures and cented text under imgs

--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,10 @@
     height: auto;
     min-width: 200px;
     margin: 5px;
+    text-align: center;
 }
 
 img {
     justify-content: center;
+    border-radius: 70px 100px 70px 100px;
 }
